# graph1920

./: .gitignore  BoundaryBox.cpp  BoundaryBox.h  CMakeLists.txt  Graph2019.cbp  NoiseGenerator.cpp  NoiseGenerator.h  README.md  build.sh  butterfly_schema.h  catmull_clark_schema.h  customschemawidget.cpp  customschemawidget.h  data.json  doo_sabin_schema.h  graph.files  graph.includes  graph_engine.cpp  graph_engine.h  helper.h  io.h  jsonio.h  loop_schema.h  main.cpp  main_qt.cpp  mainwidget.cpp  mainwidget.h  mesh.h  moc_mainwidget.cpp  moc_mainwidget.cpp_parameters  noiseglnoisy.cpp  noiseglnoisy.h  noisegloriginal.cpp  noisegloriginal.h  noisewidget.cpp  noisewidget.h  object.h  oglwidget.cpp  oglwidget.h  schema.h  (+3 more)
third_party_libs/easy_as_ply/: PlyData.cpp  PlyData.h  PlyElement.cpp  PlyElement.h  PlyFormat.h  PlyProperty.cpp  PlyProperty.h  PlyReader.cpp  PlyReader.h  PlyWriter.cpp  PlyWriter.h
